pkg/front_end/testcases/inference/infer_correctly_on_multiple_variables_declared_together.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

class A extends core::Object {
  field dynamic x = null;
  field core::int y = 2;
  field core::String z = "hi";
  default constructor •() → void
    : super core::Object::•()
    ;
}
class B extends core::Object implements self::A {
  field dynamic x = 2;
  field core::int y = 3;
  field core::String z = null;
  field core::int w = 2;
  default constructor •() → void
    : super core::Object::•()
    ;
}
static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/inference/infer_correctly_on_multiple_variables_declared_together.dart:26:3: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n  s = /*error:INVALID_ASSIGNMENT*/ new B(). /*@target=B::y*/ y;\n  ^", "pkg/front_end/testcases/inference/infer_correctly_on_multiple_variables_declared_together.dart:28:3: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n  s = /*error:INVALID_ASSIGNMENT*/ new B(). /*@target=B::w*/ w;\n  ^", "pkg/front_end/testcases/inference/infer_correctly_on_multiple_variables_declared_together.dart:32:3: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n  i = /*error:INVALID_ASSIGNMENT*/ new B(). /*@target=B::z*/ z;\n  ^"]/* from null */;
static method foo() → dynamic {
  core::String s;
  core::int i;
  s = new self::B::•().{self::B::x} as{TypeError} core::String;
  s = new self::B::•().{self::B::y} as{TypeError} core::String;
  s = new self::B::•().{self::B::z};
  s = new self::B::•().{self::B::w} as{TypeError} core::String;
  i = new self::B::•().{self::B::x} as{TypeError} core::int;
  i = new self::B::•().{self::B::y};
  i = new self::B::•().{self::B::z} as{TypeError} core::int;
  i = new self::B::•().{self::B::w};
}
static method main() → dynamic {}
